fix(server): GET /relations/type/{sender_id}/{receiver_id}, deletion of conv fixed
