# server/src/controllers/relationsController.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getAllRelations, getRelationsBySenderId, insertRelation, getBlockedUsersBySenderId, getLikedUsersBySenderId, getMatchedUsersBySenderId, deleteRelationByContent } from '../services/relationsService.js';
+import { isBlocked, getAllRelations, getRelationsBySenderId, insertRelation, getBlockedUsersBySenderId, getLikedUsersBySenderId, getMatchedUsersBySenderId, deleteRelationByContent, getRelationTypeOfUsers } from '../services/relationsService.js';
 import jwt from 'jsonwebtoken';
 import log from '../config/log.js';
 
@@ -55,26 +55,44 @@ router.get('/:sender_id/liked', async (req, res) => {
 // get matched users by sender_id
 router.get('/:sender_id/matched', async (req, res) => {
     try {
-    log.info('[relationsController]', 'get all matched user by sender_id');
-    const sender_id = req.params.sender_id;
-    const matches = await getMatchedUsersBySenderId(sender_id);
-    res.send(matches);
+      log.info('[relationsController]', 'get all matched user by sender_id');
+      const sender_id = req.params.sender_id;
+      const matches = await getMatchedUsersBySenderId(sender_id);
+      res.send(matches);
     } catch (err) {
-    res.status(500).send(err.message);
+      res.status(500).send(err.message);
     }
 });
 
+// get relation type between users
+router.get('/type/:sender_id/:receiver_id', async (req, res) => {
+  try {
+    const sender_id = req.params.sender_id
+    const receiver_id = req.params.receiver_id;
+    log.info('[relationsController]', 'get relation type between users');
+    const type = await getRelationTypeOfUsers(sender_id, receiver_id);
+    res.send(type);
+  } catch (err) {
+    res.status(500).send(err.message);
+  }
+});
 
 // Create new relations
 router.post('/', async (req, res) => {
   try {
     const { sender_id, receiver_id, type } = req.body;
+
+    const blocked = await isBlocked(sender_id, receiver_id);
+    if (blocked) {
+      throw 'You are blocked';
+    }
+
     const newRelation = await insertRelation(sender_id, receiver_id, type);
 
     res.send(newRelation);
   } catch (err) {
-    if (err.message === 'Invalid email or password.') {
-      res.status(401).send(err.message);
+    if (err.message === 'You are blocked') {
+      res.status(404).send(err.message);
     } else {
       res.status(500).send(err.message);
     }
